ADD --- se deja lista toda la parte funcional del reto

--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
     "react-router-dom": "^6.3.0",
-    "react-scripts": "3.4.0"
+    "react-scripts": "3.4.0",
+    "reactstrap": "^9.0.2"
   },
   "scripts": {
     "start": "react-scripts start",
